@@ -73,6 +73,7 @@ New features:
 - Detect "Unknown error 10" = "You are out of available time paid for".
 - "eq" command now accepts item names.
 - Add new commands: doridori, bingbing, bangbang.
+- Better support for _monsters and _notMonsters with attackComboSlot.
 
 New config options:
 - autoSpell (spell name)
